ovphysx/0.3.7/_downloads/27d649e8afcaadd358fbe2108bab57a9/ovphysx_types.h


typedef struct ovphysx_string_t
{
    const char* ptr;   
    size_t length;     
} ovphysx_string_t;
    typedef uint64_t ovphysx_op_index_t;
    typedef enum
    {
        OVPHYSX_API_SUCCESS = 0,             
        OVPHYSX_API_ERROR = 1,               
        OVPHYSX_API_TIMEOUT = 2,             
        OVPHYSX_API_NOT_IMPLEMENTED = 3,     
        OVPHYSX_API_INVALID_ARGUMENT = 4,    
        OVPHYSX_API_NOT_FOUND = 5,           
        OVPHYSX_API_BUFFER_TOO_SMALL = 6,    
        OVPHYSX_API_DEVICE_MISMATCH = 7,     
        OVPHYSX_API_GPU_NOT_AVAILABLE = 8,   
    } ovphysx_api_status_t;
    typedef struct
    {
        ovphysx_api_status_t status; 
    } ovphysx_result_t;
    typedef struct
    {
        ovphysx_api_status_t status; 
        ovphysx_op_index_t op_index; 
    } ovphysx_enqueue_result_t;
    typedef struct
    {
        ovphysx_op_index_t* error_op_indices;         
        size_t num_errors;                            
        ovphysx_op_index_t lowest_pending_op_index;   
    } ovphysx_op_wait_result_t;
    typedef enum
    {
        OVPHYSX_TENSOR_INVALID = 0,
        OVPHYSX_TENSOR_RIGID_BODY_POSE_F32 = 1,          
        OVPHYSX_TENSOR_RIGID_BODY_VELOCITY_F32 = 2,      
        OVPHYSX_TENSOR_RIGID_BODY_MASS_F32 = 3,          
        OVPHYSX_TENSOR_RIGID_BODY_INERTIA_F32 = 4,       
        OVPHYSX_TENSOR_RIGID_BODY_COM_POSE_F32 = 5,      
        OVPHYSX_TENSOR_ARTICULATION_ROOT_POSE_F32 = 10,      
        OVPHYSX_TENSOR_ARTICULATION_ROOT_VELOCITY_F32 = 11,  
        OVPHYSX_TENSOR_ARTICULATION_LINK_POSE_F32 = 20,         
        OVPHYSX_TENSOR_ARTICULATION_LINK_VELOCITY_F32 = 21,     
        OVPHYSX_TENSOR_ARTICULATION_LINK_ACCELERATION_F32 = 22, 
        OVPHYSX_TENSOR_ARTICULATION_DOF_POSITION_F32 = 30,           
        OVPHYSX_TENSOR_ARTICULATION_DOF_VELOCITY_F32 = 31,           
        OVPHYSX_TENSOR_ARTICULATION_DOF_POSITION_TARGET_F32 = 32,    
        OVPHYSX_TENSOR_ARTICULATION_DOF_VELOCITY_TARGET_F32 = 33,    
        OVPHYSX_TENSOR_ARTICULATION_DOF_ACTUATION_FORCE_F32 = 34,    
        OVPHYSX_TENSOR_ARTICULATION_DOF_STIFFNESS_F32 = 35,        
        OVPHYSX_TENSOR_ARTICULATION_DOF_DAMPING_F32 = 36,          
        OVPHYSX_TENSOR_ARTICULATION_DOF_LIMIT_F32 = 37,            
        OVPHYSX_TENSOR_ARTICULATION_DOF_MAX_VELOCITY_F32 = 38,     
        OVPHYSX_TENSOR_ARTICULATION_DOF_MAX_FORCE_F32 = 39,        
        OVPHYSX_TENSOR_ARTICULATION_DOF_ARMATURE_F32 = 40,         
        OVPHYSX_TENSOR_ARTICULATION_DOF_FRICTION_PROPERTIES_F32 = 41, 
        OVPHYSX_TENSOR_RIGID_BODY_FORCE_F32 = 50,            
        OVPHYSX_TENSOR_RIGID_BODY_WRENCH_F32 = 51,           
        OVPHYSX_TENSOR_ARTICULATION_LINK_WRENCH_F32 = 52,    
        OVPHYSX_TENSOR_ARTICULATION_BODY_MASS_F32 = 60,            
        OVPHYSX_TENSOR_ARTICULATION_BODY_COM_POSE_F32 = 61,        
        OVPHYSX_TENSOR_ARTICULATION_BODY_INERTIA_F32 = 62,         
        OVPHYSX_TENSOR_ARTICULATION_BODY_INV_MASS_F32 = 63,        
        OVPHYSX_TENSOR_ARTICULATION_BODY_INV_INERTIA_F32 = 64,     
        OVPHYSX_TENSOR_ARTICULATION_JACOBIAN_F32 = 70,
        OVPHYSX_TENSOR_ARTICULATION_MASS_MATRIX_F32 = 71,                
        OVPHYSX_TENSOR_ARTICULATION_CORIOLIS_AND_CENTRIFUGAL_FORCE_F32 = 72, 
        OVPHYSX_TENSOR_ARTICULATION_GRAVITY_FORCE_F32 = 73,              
        OVPHYSX_TENSOR_ARTICULATION_LINK_INCOMING_JOINT_FORCE_F32 = 74,  
        OVPHYSX_TENSOR_ARTICULATION_DOF_PROJECTED_JOINT_FORCE_F32 = 75, 
        OVPHYSX_TENSOR_ARTICULATION_FIXED_TENDON_STIFFNESS_F32 = 80,        
        OVPHYSX_TENSOR_ARTICULATION_FIXED_TENDON_DAMPING_F32 = 81,          
        OVPHYSX_TENSOR_ARTICULATION_FIXED_TENDON_LIMIT_STIFFNESS_F32 = 82,  
        OVPHYSX_TENSOR_ARTICULATION_FIXED_TENDON_LIMIT_F32 = 83,            
        OVPHYSX_TENSOR_ARTICULATION_FIXED_TENDON_REST_LENGTH_F32 = 84,      
        OVPHYSX_TENSOR_ARTICULATION_FIXED_TENDON_OFFSET_F32 = 85,           
        OVPHYSX_TENSOR_ARTICULATION_SPATIAL_TENDON_STIFFNESS_F32 = 90,       
        OVPHYSX_TENSOR_ARTICULATION_SPATIAL_TENDON_DAMPING_F32 = 91,         
        OVPHYSX_TENSOR_ARTICULATION_SPATIAL_TENDON_LIMIT_STIFFNESS_F32 = 92, 
        OVPHYSX_TENSOR_ARTICULATION_SPATIAL_TENDON_OFFSET_F32 = 93,          
        OVPHYSX_TENSOR_RIGID_BODY_SHAPE_FRICTION_AND_RESTITUTION_F32 = 100, 
        OVPHYSX_TENSOR_RIGID_BODY_CONTACT_OFFSET_F32 = 101,            
        OVPHYSX_TENSOR_RIGID_BODY_REST_OFFSET_F32 = 102,               
        OVPHYSX_TENSOR_ARTICULATION_SHAPE_FRICTION_AND_RESTITUTION_F32 = 110, 
        OVPHYSX_TENSOR_ARTICULATION_CONTACT_OFFSET_F32 = 111,          
        OVPHYSX_TENSOR_ARTICULATION_REST_OFFSET_F32 = 112,             
    } ovphysx_tensor_type_t;
    typedef struct
    {
        ovphysx_string_t pattern;                
        const ovphysx_string_t* prim_paths;      
        uint32_t prim_paths_count;               
        ovphysx_tensor_type_t tensor_type;       
    } ovphysx_tensor_binding_desc_t;
    typedef struct
    {
        DLDataType dtype;                    
        int32_t ndim;                        
        int64_t shape[4];                    
    } ovphysx_tensor_spec_t;
    typedef struct ovphysx_articulation_metadata_t
    {
        int32_t  dof_count;            
        int32_t  body_count;           
        int32_t  joint_count;          
        int32_t  fixed_tendon_count;   
        int32_t  spatial_tendon_count; 
        bool     is_fixed_base;        
    } ovphysx_articulation_metadata_t;
    typedef struct
    {
        uintptr_t stream;        
        uintptr_t wait_event;    
        uintptr_t signal_event;  
    } ovphysx_cuda_sync_t;
    typedef enum
    {
        OVPHYSX_DEVICE_AUTO = 0,
        OVPHYSX_DEVICE_GPU = 1,
        OVPHYSX_DEVICE_CPU = 2,
    } ovphysx_device_t;
    typedef enum ovphysx_config_key_type_t
    {
        OVPHYSX_CONFIG_KEY_TYPE_BOOL,       
        OVPHYSX_CONFIG_KEY_TYPE_INT32,      
        OVPHYSX_CONFIG_KEY_TYPE_FLOAT,      
        OVPHYSX_CONFIG_KEY_TYPE_STRING,     
        OVPHYSX_CONFIG_KEY_TYPE_CARBONITE,  
        OVPHYSX_CONFIG_KEY_TYPE_COUNT
    } ovphysx_config_key_type_t;
    typedef enum ovphysx_config_bool_t
    {
        OVPHYSX_CONFIG_DISABLE_CONTACT_PROCESSING,        
        OVPHYSX_CONFIG_COLLISION_CONE_CUSTOM_GEOMETRY,     
        OVPHYSX_CONFIG_COLLISION_CYLINDER_CUSTOM_GEOMETRY, 
        OVPHYSX_CONFIG_BOOL_COUNT
    } ovphysx_config_bool_t;
    typedef enum ovphysx_config_int32_t
    {
        OVPHYSX_CONFIG_NUM_THREADS,          
        OVPHYSX_CONFIG_SCENE_MULTI_GPU_MODE, 
        OVPHYSX_CONFIG_INT32_COUNT
    } ovphysx_config_int32_t;
    typedef enum ovphysx_config_float_t
    {
        OVPHYSX_CONFIG_FLOAT_COUNT
    } ovphysx_config_float_t;
    typedef enum ovphysx_config_string_t
    {
        OVPHYSX_CONFIG_STRING_COUNT
    } ovphysx_config_string_t;
    typedef struct ovphysx_config_entry_t
    {
        ovphysx_config_key_type_t key_type;  
        union {
            ovphysx_config_bool_t bool_key;
            ovphysx_config_int32_t int32_key;
            ovphysx_config_float_t float_key;
            ovphysx_config_string_t string_key;
            ovphysx_string_t carbonite_key;      
        } key;
        union {
            bool bool_value;
            int32_t int32_value;
            float float_value;
            ovphysx_string_t string_value;       
        } value;
    } ovphysx_config_entry_t;
    typedef struct ovphysx_create_args
    {
        ovphysx_string_t bundled_deps_path;          
        const ovphysx_config_entry_t* config_entries; 
        uint32_t config_entry_count;                  
        ovphysx_device_t device;            
        int32_t gpu_index;                  
    } ovphysx_create_args;