ovphysx/python/ovphysx/_bindings.py


    # Fall back to the bundled library when OVPHYSX_LIB is not set.
    if bundled:
        try:
            # Keep ctypes' secure Windows defaults. They include the absolute
            # DLL's directory and the os.add_dll_directory() paths above;
            # winmode=0 would bypass those registered dependency directories.
            return ctypes.CDLL(bundled)
        except OSError as e:
            _logger.warning("Failed to load bundled library %s: %s; will try fallback paths", bundled, e)

    errors: list[str] = []

    # Default linker paths
    for name in _platform_lib_names():
        try:
            return ctypes.CDLL(name)
        except OSError as e:
            errors.append(f"{name}: {e}")
            continue

    detail = ""
    if errors:
        detail = "\nLoad attempts:\n  - " + "\n  - ".join(errors)
    raise OSError(
        "Could not load libovphysx (bundled or system). Consider installing a wheel that includes the "
        "native library for your platform, or set OVPHYSX_LIB to the shared library path." + detail
    )


_lib = _load_library()
_logger.debug("Loaded library: %s", _lib)


class ovphysx_string_t(ctypes.Structure):
    """String structure with pointer and length (matches ovphysx_string_t in C API)."""

    _fields_ = [
        ("ptr", c_char_p),
        ("length", c_size_t),
    ]

    def __init__(self, value=None):
        super().__init__()
        encoded = str(value or "").encode("utf-8")
        self._bytes = ctypes.create_string_buffer(encoded)
        self.ptr = ctypes.cast(self._bytes, c_char_p)
        self.length = len(encoded)

    def __str__(self):
        # Use explicit length; C side does not guarantee null termination.
        if not self.ptr or not self.length:
            return ""
        return ctypes.string_at(self.ptr, self.length).decode("utf-8")

    def __bool__(self):
        return self.ptr is not None and self.length > 0

    def __len__(self) -> int:
        """Return byte length (excluding null terminator)."""
        return int(self.length)


# Config key type discriminator (matches ovphysx_config_key_type_t)
OVPHYSX_CONFIG_KEY_TYPE_BOOL = 0
OVPHYSX_CONFIG_KEY_TYPE_INT32 = 1
OVPHYSX_CONFIG_KEY_TYPE_FLOAT = 2
OVPHYSX_CONFIG_KEY_TYPE_STRING = 3
OVPHYSX_CONFIG_KEY_TYPE_CARBONITE = 4


# Key union for ovphysx_config_entry_t
class _config_key_union(ctypes.Union):
    _fields_ = [
        ("bool_key", c_int),         # ovphysx_config_bool_t enum
        ("int32_key", c_int),        # ovphysx_config_int32_t enum
        ("float_key", c_int),        # ovphysx_config_float_t enum
        ("string_key", c_int),       # ovphysx_config_string_t enum
        ("carbonite_key", ovphysx_string_t),  # for KEY_TYPE_CARBONITE
    ]


# Value union for ovphysx_config_entry_t
class _config_value_union(ctypes.Union):
    _fields_ = [
        ("bool_value", ctypes.c_bool),
        ("int32_value", c_int32),
        ("float_value", c_float),
        ("string_value", ovphysx_string_t),  # for KEY_TYPE_STRING and KEY_TYPE_CARBONITE
    ]


class ovphysx_config_entry_t(ctypes.Structure):
    """Typed config entry (matches ovphysx_config_entry_t in C API)."""

    _fields_ = [
        ("key_type", c_int),         # ovphysx_config_key_type_t enum
        ("key", _config_key_union),
        ("value", _config_value_union),
    ]


# ovphysx_create_args - matches ovphysx_create_args in C API
class ovphysx_create_args(ctypes.Structure):
    """Configuration for creating an ovphysx instance."""

    _fields_ = [
        ("bundled_deps_path", ovphysx_string_t),
        ("config_entries", POINTER(ovphysx_config_entry_t)),
        ("config_entry_count", c_uint32),
        ("active_cuda_gpus", ovphysx_string_t),
    ]


# ovphysx result structures
class ovphysx_result_t(ctypes.Structure):
    """Result returned by synchronous API functions."""

    _fields_ = [
        ("status", c_int),
    ]


class ovphysx_enqueue_result_t(ctypes.Structure):
    """Result returned by asynchronous API functions."""

    _fields_ = [
        ("status", c_int),
        ("op_index", c_uint64),
    ]


class ovphysx_op_wait_result_t(ctypes.Structure):
    """Result from ovphysx_wait_op() containing failed op indices and pending operation status."""

    _fields_ = [
        ("error_op_indices", POINTER(c_uint64)),
        ("num_errors", c_size_t),
        ("lowest_pending_op_index", c_uint64),
    ]


# CUDA sync structure
class ovphysx_cuda_sync_t(ctypes.Structure):
    """CUDA synchronization for GPU operations."""

    _fields_ = [
        ("stream", c_uint64),
        ("wait_event", c_uint64),
        ("signal_event", c_uint64),
    ]


# Tensor binding descriptor
class ovphysx_tensor_binding_desc_t(ctypes.Structure):
    """Descriptor for creating a tensor binding.

    A tensor binding connects physics-object paths to a tensor type, enabling
    bulk read/write for authored USD objects and runtime-only clones.

    Prim selection (mutually exclusive - use ONE of these):
      - pattern: Glob pattern like "/World/robot*"
      - prim_paths: Explicit list of exact physics-object paths

    If prim_paths is set, pattern is ignored.
    """

    _fields_ = [
        ("pattern", ovphysx_string_t),  # Physics-object path glob
        ("prim_paths", POINTER(ovphysx_string_t)),  # Exact object paths (NULL = use pattern)
        ("prim_paths_count", c_uint32),  # Number of object paths (0 = use pattern)
        ("tensor_type", c_int),  # ovphysx_tensor_type_t enum
    ]


# Tensor specification returned by ovphysx_get_tensor_binding_spec
class ovphysx_tensor_spec_t(ctypes.Structure):
    """Complete tensor specification for DLTensor construction.

    Use ovphysx_get_tensor_binding_spec() to get the exact dtype, rank, and shape
    needed to allocate a compatible tensor.

    Tensor specifications by type:
      - Rigid body pose:     ndim=2, shape=[N, 7]
      - Rigid body velocity: ndim=2, shape=[N, 6]
      - Articulation root:   ndim=2, shape=[N, 7] or [N, 6]
      - Articulation links:  ndim=3, shape=[N, L, 7] or [N, L, 6]
      - Articulation DOF:    ndim=2, shape=[N, D]
      - Deformable body:     ndim=3, shape=[N, V, C] or [N, E, K]
      - Deformable material: ndim=1, shape=[M]
    """

    _fields_ = [
        ("dtype", DLDataType),  # DLPack data type for this tensor type
        ("ndim", c_int32),  # Number of dimensions (2 or 3)
        ("shape", c_int64 * 4),  # Shape dimensions [dim0, dim1, dim2, 0]
    ]


class ovphysx_articulation_metadata_t(ctypes.Structure):
    """Articulation topology metadata (matches ovphysx_articulation_metadata_t in C API)."""

    _fields_ = [
        ("dof_count", c_int32),
        ("body_count", c_int32),
        ("joint_count", c_int32),
        ("fixed_tendon_count", c_int32),
        ("spatial_tendon_count", c_int32),
        ("is_fixed_base", ctypes.c_bool),
    ]


# --- ovstage / ovx native types (the read surface uses these directly) ---------
# These ctypes structs mirror the C ABI layout of ovstage's own types from
# <ovstage/ovstage_api/ovstage_api_types.h> and <ovx/string_types.h>; field
# order/types/padding must match those headers exactly.


class ovx_string_t(ctypes.Structure):
    """ovx_string_t: pointer + length (not necessarily null-terminated)."""

    _fields_ = [
        ("ptr", c_char_p),
        ("length", c_size_t),
    ]


class ovx_string_or_token_t(ctypes.Structure):
    """ovx_string_or_token_t: an interned ``token`` OR a ``string`` name.

    Pass ``token != 0`` for an interned attribute token, else a ``string`` name.
    """

    _fields_ = [
        ("token", c_uint64),   # ovx_token_t
        ("string", ovx_string_t),
    ]


class ovstage_ordinal_range_t(ctypes.Structure):
    """ovstage_ordinal_range_t — range for update_from_ovstage.

    ``has_start_ordinal`` True ⇒ closed range [start_ordinal, end_ordinal];
    False ⇒ the single end_ordinal.
    """

    _fields_ = [
        ("start_ordinal", c_uint64),       # ovstage_ordinal_t
        ("end_ordinal", c_uint64),
        ("has_start_ordinal", ctypes.c_bool),
    ]


class ovstage_prim_group_t(ctypes.Structure):
    """ovstage_prim_group_t — which prims a group covers."""

    _fields_ = [
        ("list", c_uint64),                # ovx_primpath_list_t
        ("offset", c_uint32),
        ("count", c_uint32),
        ("index_map", POINTER(c_uint32)),
    ]


class ovstage_cuda_sync_t(ctypes.Structure):
    """ovstage_cuda_sync_t - producer stream and wait event."""

    _fields_ = [
        ("stream", c_size_t),
        ("wait_event", c_size_t),
    ]


class ovstage_data_t(ctypes.Structure):
    """ovstage_data_t — borrowed tensor(s) plus sparsity / GPU-sync metadata."""

    _fields_ = [
        ("tensors", POINTER(DLTensor)),
        ("tensor_count", c_uint32),
        ("count", c_uint32),
        ("index_map", POINTER(c_uint32)),
        ("mask", c_void_p),                # ovstage_mask_t (const uint64_t*)
        ("cuda_sync", ovstage_cuda_sync_t),
    ]


class ovstage_attribute_meta_t(ctypes.Structure):
    """ovstage_attribute_meta_t — write floor + layout generation."""

    _fields_ = [
        ("attribute_write_floor_ordinal", c_uint64),
        ("layout_generation", c_uint64),
    ]


class ovstage_read_group_t(ctypes.Structure):
    """ovstage_read_group_t — one physics-output column group (ovstage's own type).

    The ovphysx output read returns these verbatim (producer-owned borrowed pointer
    from :func:`ovphysx_fetch_read_next`). ``attribute`` and ``prims.list`` are
    interned handles (resolve via :meth:`PhysX.query_shared_dictionary`); ``data.tensors``
    is a borrowed array of ``data.tensor_count`` DLTensors with tuple width in each
    tensor's ``dtype.lanes``. Borrowed fields stay valid until the group's
    ``read_group_id`` is released via :meth:`PhysX.release_group`. Field
    order/types/padding must match ovstage_api_types.h exactly.
    """

    _fields_ = [
        ("read_group_id", c_uint64),       # ovstage_read_group_id_t
        ("attribute", c_uint64),           # ovx_token_t
        ("ordinal", c_uint64),             # ovstage_ordinal_t
        ("is_delete", ctypes.c_bool),
        ("is_array", ctypes.c_bool),
        ("semantic", c_int32),             # ovstage_attribute_semantic_t
        ("prims", ovstage_prim_group_t),
        ("data", ovstage_data_t),
        ("meta", ovstage_attribute_meta_t),
    ]


class ovstage_query_result_t(ctypes.Structure):
    """ovstage_query_result_t — query discovery summary (ovstage's own type).

    ``attributes`` is a borrowed array of ``attribute_count`` interned attribute
    tokens, valid until the query is released. ``total_prim_count == 0`` is the
    empty-match case.
    """

    _fields_ = [
        ("query_result_id", c_uint64),     # ovstage_query_result_id_t
        ("attributes", POINTER(c_uint64)), # const ovx_token_t*
        ("attribute_count", c_size_t),
        ("all_handle", c_uint64),          # ovstage_query_handle_t
        ("total_prim_count", c_size_t),
    ]


# Core API function prototypes
_lib.ovphysx_initialize.restype = ovphysx_result_t
_lib.ovphysx_initialize.argtypes = []

_lib.ovphysx_shutdown.restype = ovphysx_result_t
_lib.ovphysx_shutdown.argtypes = []

_lib.ovphysx_create_instance.restype = ovphysx_result_t
_lib.ovphysx_create_instance.argtypes = [POINTER(ovphysx_create_args), POINTER(c_uint64)]

_lib.ovphysx_set_cpu_mode.restype = ovphysx_result_t
_lib.ovphysx_set_cpu_mode.argtypes = [ctypes.c_bool]

_lib.ovphysx_destroy_instance.restype = ovphysx_result_t
_lib.ovphysx_destroy_instance.argtypes = [c_uint64]

_lib.ovphysx_reset_stage.restype = ovphysx_enqueue_result_t
_lib.ovphysx_reset_stage.argtypes = [c_uint64]

_lib.ovphysx_step.restype = ovphysx_enqueue_result_t
_lib.ovphysx_step.argtypes = [c_uint64, c_float]

_lib.ovphysx_step_sync.restype = ovphysx_result_t
_lib.ovphysx_step_sync.argtypes = [c_uint64, c_float]
